# aktualizr

./: CMakeLists.txt
docker/: Dockerfile.ubuntu.bionic
src/: deb.cc  invstorage.h  packagemanagerfactory.h  sotauptaneclient.cc  sql_utils.h  sqlstorage.cc
src/aktualizr_lite/: CMakeLists.txt  helpers.cc  helpers.h  helpers_test.cc  main.cc  test_lite.sh  version.h  version_test.cc
src/libaktualizr/crypto/: crypto_test.cc  keymanager.cc  p11engine.cc
src/libaktualizr/http/: httpclient.cc  httpclient.h
src/libaktualizr/package_manager/: CMakeLists.txt  dockerapp_bundles.cc  dockerapp_standalone.cc  dockerappmanager.cc  dockerappmanager.h  dockerappmanager_test.cc  ostreemanager.cc  ostreemanager.h  packagemanagerconfig.cc  packagemanagerconfig.h  packagemanagerfactory.cc
src/libaktualizr/primary/: sotauptaneclient.cc  sotauptaneclient.h
src/libaktualizr/uptane/: fetcher.cc  imagesrepository.cc  tuf.cc  tuf.h
src/libaktualizr/utilities/: types.cc
src/uptane/: tuf.h  uptanerepository.cc  uptanerepository.h
tests/: uptane_test.cc
